--- a/_posts/2020-06-14-websitesimilarities/websitesimilarities.Rmd
+++ b/_posts/2020-06-14-websitesimilarities/websitesimilarities.Rmd
@@ -2,7 +2,7 @@
 title: "Is Batman more like the Joker or more like Robin?"
 description: |
   Spend enough time in academia and you might start to think that this is an excellent research question. In this post
-  I try to give an answer, by calculating the website similarities between the Wikipedia pages of Batman, the Joker and
+  I try to give an answer by calculating the website similarities between the Wikipedia pages of Batman, the Joker and
   Robin. Some web scraping, data wrangling and NLP with Python lies ahead!
 author:
   - name: Stefan Stein
