--- a/_posts/2020-10-23-tidyhackr-building-an-ip-sweeper-with-r/tidyhackr-building-an-ip-sweeper-with-r.Rmd
+++ b/_posts/2020-10-23-tidyhackr-building-an-ip-sweeper-with-r/tidyhackr-building-an-ip-sweeper-with-r.Rmd
@@ -19,9 +19,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Being a hackR
 
-Truth be told, I cannot think of too many reasons *why* you would want to build an IP sweeper, or any half-serious infosec tool, for that matter, with R. There is an abundance of tools out there (e.g. [`arp-scan`](https://linux.die.net/man/1/arp-scan) or [`netdiscover`](https://github.com/alexxy/netdiscover), just to name two) that are much faster and provide much richer information than what we will build here.
+Truth be told, I cannot think of too many reasons *why* you would want to build an IP sweeper, or any half-serious infosec tool, for that matter, with R. There is an abundance of tools out there (e.g. the infamous [nmap](https://nmap.org), [`arp-scan`](https://linux.die.net/man/1/arp-scan) or [`netdiscover`](https://github.com/alexxy/netdiscover), just to name a few) that are much faster and provide much richer information than what we will build here.
 
 The reason why I wanted to do this project nonetheless is simply to see if I *could* - and the answer turned out to be "yes". At the end of this post, we will have built a functioning IP sweeper. It won't be fast and it won't be very useful for most practical purposes, but it will do what it is supposed to, which is give you a list of all the other devices connected to the network you are on. For me, this project has been a nice learning experience about R programming and computer networking and I hope this post will bring you value, too.
+
+# Disclaimer
+
+Please be aware that the resources in this blog post are provided for educational purposes only. Don't use them for anything illegal! Only sweep networks you own or have explicit permission to sweep. If you get in trouble for using the code presented here in an illicit manner, it is not my problem.
 
 # Finding other machines on your network
 
@@ -51,17 +55,17 @@ $$
 
 Put simply, an IPv4 address consists of four numbers between $0$ and $255$, written next to each other, separated by a period. Each of these numbers corresponds to one byte whose value has been written out in decimal notation rather than binary notation, which allows for a more compact way of writing. 
 
-A quick calculation shows that there only are $2^{32} \approx 4.3 \times 10^9$ IPv4 addresses in the whole world - way too few to assign a unique IP address to every device connected to the internet. To remedy this, people came up with IPv6, which with 128 bit long addresses and has an address space of $2^{128} \approx 3.4 \times 10^{38}$, which are more than enough addresses (for now, anyways).
+A quick calculation shows that there only are $2^{32} \approx 4.3 \times 10^9$ IPv4 addresses in the whole world - way too few to assign a unique IP address to every device connected to the internet. To remedy this, people came up with IPv6, which with 128 bit long addresses and has an address space of $2^{128} \approx 3.4 \times 10^{38}$, which are more addresses than we could ever need.
 
 Still, IPv4 addresses did not abruptly disappear as one might expect. Instead, people used another workaround that allowed IPv4 to be continued to be used: The distinction between private and public IP addresses.
 
-Say, I have connected with my computing device to my home WIFI. My home WIFI and all the devices connected to it form one network. When my device wants to talk to a machine on a different network (such as a server hosting a website), my device sends the message it wants to transmit to the so-called *default gateway* for talking to the outside world (usually located inside little blinking box commonly called *router*). That is a particular router on my network that has an interface to other networks (“the outside world”) and its address was told to my computer when it first logged onto the network. In fact, every device on my network sends its requests with the outside world through that default gateway and the outside world sends all its replies back to that default gateway which then distributes it to the correct machines on my WIFI network. That means, for the outside world, it does not matter which devices are sitting on my network. All it needs to know is how to reach my default gateway, which then takes care of the rest. For that purpose, the default gateway has two interfaces, each with its own IP address. Let's call them the "inwards facing IP address", known to the devices on my network and the "outwards facing IP address" known to the outside world. The outwards facing IP address has to be unique, so that traffic can be sent correctly back to the machines on my network. The inward facing IP address on the other hand can be used in other networks, too! In fact, if you check your device's IP address while connected to your home network, it will most likely start with $192.168.$, as this is the type of IP address typically assigned to home networks.
+Say, I have connected with my computing device to my home WIFI. My home WIFI and all the devices connected to it form one network. When my device wants to talk to a machine on a different network (such as a server hosting a website), my device sends the message it wants to transmit to the so-called *default gateway* for talking to the outside world (usually located inside little blinking box commonly called *router*). That is a particular router on my network that has an interface to other networks (“the outside world”) and its address was told to my computer when it first logged onto the network. In fact, every device on my network sends its requests with the outside world through that default gateway and the outside world sends all its replies back to that default gateway which then distributes it to the correct machines on my WIFI network. That means, for the outside world, it does not matter which devices are sitting on my network. All it needs to know is how to reach my default gateway, which then takes care of the rest. For that purpose, the default gateway has two interfaces, each with its own IP address. Let's call them the "inwards facing IP address", known to the devices on my network and the "outwards facing IP address" known to the outside world. The outwards facing IP address has to be unique, so that traffic can be sent correctly back to the machines on my network. The inward facing IP address on the other hand can be used in other networks, too! Simply because these inward facing addresses are only used to communicate within my local network. If somebody else, far away, uses the same local IP addresses in their network, it has no effect on me using them. These local addresses are never used to talk to the outside world. In fact, if you check your device's IP address while connected to your home network, it will most likely start with $192.168.$, as this is the type of IP address typically assigned to home networks.
 
 Therefore, sharing your private IP (the one starting with $192.168.$) won't tell others anything about you other than the fact that you are probably using a standard home network. The public or outwards facing IP of your router does reveal a lot about your location, however, as it is a unique identifier for your home network. When police in movies talk about "tracking down IP addresses", they are referring to these public IPs.
 
 ## Finding your IP address
 
-To check your device's (private) IP address on a Mac, simply hold down the option (alt) key and click on the wifi symbol in the top right corner of your status bar. It will display all sorts of information about your current wifi connection including:
+To check your device's (private/ inward facing) IP address on a Mac, simply hold down the option (alt) key and click on the wifi symbol in the top right corner of your status bar. It will display all sorts of information about your current WIFI connection including:
 
 - IP-address: The address of your device on the network,
 - Router: The address of the default gateway.
@@ -72,7 +76,7 @@ You can also find your address via the terminal (this also works on Linux). Open
 ifconfig
 ```
 
-Depending on how many networks your computer is connected to, this might result in a length list. Usually you are interested in the WIFI network located at `en0`, which should be located at the top of the list. You can also run
+Depending on how many networks your computer is connected to, this might result in a lengthy list. Usually you are interested in the WIFI network located at `en0`, which should be located at the top of the list. You can also run
 
 
 ```{bash, eval=FALSE}
@@ -92,7 +96,7 @@ The line starting with "IPv4 address" contains your computer's IP address.
 
 ## Available IP addresses on a network
 
-The next question we need to answer is, which IP addresses are available on the network we are connected to. Obviously it cannot be all $2^{32}$ and indeed, it usually are way fewer than that. The answer to that question is given by the [`subnetmask`](https://en.wikipedia.org/wiki/Subnetwork). It has the same format as an IP address and its value is located on the same line of the output of `ifconfig` (Mac, Linux) or on the line starting with `subnetmask` on Windows. For home networks, it usually is $255.255.255.0$. The value of the subnetmask tells us how many of leading bits of the 32 bits of the IP addresses are "blocked" and how many are available to be used for the assignment of IP addresses. This is easiest understood if we convert the dot-decimal notation of the subnet mask back to binary notation. 
+The next question we need to answer is, which IP addresses are available on the network we are connected to. Obviously it cannot be all $2^{32}$ and indeed, it usually are way fewer than that. The answer to that question is given by the [`subnetmask`](https://en.wikipedia.org/wiki/Subnetwork). It has the same format as an IP address and its value is located on the same line of the output of `ifconfig` (Mac, Linux) or on the line starting with `subnetmask` on Windows. For home networks, it usually is $255.255.255.0$. The value of the subnetmask tells us how many leading bits of the 32 bits of the IP addresses are "blocked" and how many are available to be used for the assignment of IP addresses. This is easiest understood if we convert the dot-decimal notation of the subnet mask back to binary notation. 
 
 Suppose we our machine has IP address $192.168.56.3$ and we found out that the subnet mask is $255.255.255.0$. Turning it into binary representation gives us:
 
@@ -100,10 +104,134 @@ $$
 11111111.11111111.11111111.0
 $$
 
-We see that there are 24 ones in that representation. That means, the first 24 bits of the IP space are fixed. The first 24 bits of our computer's IP address are (back in dot-decimal notation): $192.168.56.$ The subnetmask of $255.255.255.0$ now tells us that every device connected to our network will have these exact same first 24 bits. Only the last 8 bits may varie between IP addresses. Since 8 bits allow for 256 different numbers, there can only be at most 256 different IP addresses assigned in our network. Since most households probably have way fewer devices connected to the internet, that's plenty for most private purposes.
+We see that there are 24 ones in that representation. That means, the first 24 bits of the IP space are fixed. The first 24 bits of our computer's IP address are (back in dot-decimal notation): $192.168.56.$ The subnetmask of $255.255.255.0$ now tells us that every device connected to our network will have these exact same first 24 bits. Only the last 8 bits may vary between IP addresses. Since 8 bits allow for 256 different numbers, there can only be at most 256 different IP addresses assigned in our network. Since most households probably have way fewer devices connected to the internet, that's plenty for most private purposes.
+
+
+## Getting that info in R
+
+Now that we have the necessary knowledge, the question is, how do we get that all that info into our R session? After all, being a true hackR means that we never leave R, right? First, we need to get our own IP address. For the purpose of this post, I have setup a virtual network using [VirtualBox](https://www.virtualbox.org) and several [virtual machines](https://en.wikipedia.org/wiki/Virtual_machine), more on that in section **FILL IN** below. The name of my virtual network is the default name `vboxnet0`. So to get the local IP address of my machine for that network, I need to run
+
+```{bash}
+ifconfig vboxnet0
+```
+
+If you are coding along on a Mac or Linux and are using your standard WIFI network, run `ifconfig en0` to get an output similar to the above. Alternatively, simply run `ifconfig` and search for your WIFI network/ for en0 (usually the first, possibly the only entry in that list). The line that we are interested in is the last one in the above display. It tells us that our local IP address is `192.168.56.1` and the subnetmask is `0xffffff00`, which is the hexadecimal notation for `255.255.255.0`, i.e. there are 256 IP addresses in that network available.
+
+Notice that the above output gives us another interesting piece of information: It tells us that the [broadcast address](https://en.wikipedia.org/wiki/Broadcast_address) of my network is `192.168.56.255`. A message sent to that address is sent to all devices connected to the network, i.e. it is quite literally "broadcasted". When IP sweeping a network, we want to ignore that address.
+
+In R, to run command line commands from within R, we can use the `system` (in case we do not specify any additional parameters) or `system2` (in case there are additional parameters) command. In this case, we want to pass the network name as parameter, so we need to use `system2`:
+
+```{r}
+raw_IP <- system2("ifconfig", args = "vboxnet0", stdout = TRUE)
+raw_IP
+```
+
+The `args` argument takes the parameters we want to pass to the commandline command and setting `stdout = TRUE` means that we would like to have the result of the command returned to us as a string.
+
+To grab the information we are after, we need to use some regex magic. We can use `grep` to grab the line that holds the information we want (the output of `ifconfig` may have differing number of lines depending on your network, so simply running `raw_IP[3]` won't do).
+
+```{r}
+raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]
+```
+
+Let's grab the first IP address. We use the `str_extract` function from the `stringr` package. Notice the tab (`\t`) sign at the beginning of the string, which we have to match, too. The regular expression we want is `"\\tinet [\\d|\\.]+"`, which translates to: Search for the pattern starting with "\tinet" (we have to escape the `\`, hence the `\\` in the expression), followed by a space, followed by as many instances of digits (`\d`) or periods (`\.`) as possible (again, we need to escape the `\` and hence are using `\\`). The output looks like this.
+
+```{r}
+library(stringr)
+raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("\\tinet [\\d|\\.]+")
+```
+
+Now, to get the actual IP address, we need to get rid of the `\tinet`:
+
+```{r}
+myip <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+  str_extract("\\tinet [\\d|\\.]+")%>%
+  str_extract("[\\d|\\.]+")
+
+myip
+```
+
+We can extract the subnet mask in a similar manner, this time matching for the expression starting with `netmask 0x` followed by any number of alphanumeric characters.
+
+```{r}
+raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+  str_extract("netmask 0x[:alnum:]+")%>%
+  str_extract("0x[:alnum:]+")
+```
+
+This is currently a string, to get it into a more readable format, we first remove the leading `0x`. Then, we split it into pairs of two (each pair of two corresponds to one byte, i.e. one of the numbers between periods in our IP address) using the `base` function `substring`:
+
+```{r}
+raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+  str_extract("netmask 0x[:alnum:]+")%>%
+  str_extract("0x[:alnum:]+")%>%
+  str_remove("0x")%>%
+  substring(., seq(1, nchar(.)-1, 2), seq(2, nchar(.), 2))
+```
+
+Next, we add the `0x` back on to each of these entries, to indicate that these are hexadecimal representations of integers. Then, we get their integer representation using `strtoi` from R `base`. Finally, we collapse the vector we created using a period between entries to get the familiar IP address notation.
+
+```{r}
+netmask <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("netmask 0x[:alnum:]+")%>%
+    str_extract("0x[:alnum:]+")%>%
+    str_remove("0x")%>%
+    substring(., seq(1, nchar(.)-1, 2), seq(2, nchar(.), 2))%>%
+    paste0("0x", .)%>%
+    strtoi()%>%
+    paste0(collapse = ".")
+
+netmask
+```
+
+Finally, we can do the same to get the broadcast address. 
+
+```{r}
+broadcast <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("broadcast [\\d|\\.]+")%>%
+    str_extract("[\\d|\\.]+")
+
+broadcast
+```
+
+We wrap all of this into a nice little function called `network_info`, where we allow to specify the network name for which we want to grab the IP data:
+
+```{r}
+network_info <- function(network_name = "en0"){
+  raw_IP <- system2("ifconfig", args = network_name, stdout = TRUE)
+  myip <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("\\tinet [\\d|\\.]+")%>%
+    str_extract("[\\d|\\.]+")
+  netmask <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("netmask 0x[:alnum:]+")%>%
+    str_extract("0x[:alnum:]+")%>%
+    str_remove("0x")%>%
+    substring(., seq(1, nchar(.)-1, 2), seq(2, nchar(.), 2))%>%
+    paste0("0x", .)%>%
+    strtoi()%>%
+    paste0(collapse = ".")
+  broadcast <- raw_IP[grep(x = raw_IP, pattern = "\\tinet ")]%>%
+    str_extract("broadcast [\\d|\\.]+")%>%
+    str_extract("[\\d|\\.]+")
+  
+  return(data.frame(IP = myip, netmask = netmask, broadcast_IP = broadcast))
+   
+}
+
+# Try it out
+my_network <- network_info("vboxnet0")
+my_network
+```
+
+
+
 
 
 ```{r}
 paste(sapply(strsplit(paste(rev(intToBits(12))),""),`[[`,2),collapse="")
 ```
 
+## Trying it out!
+
+Set up lab with virtual box
